--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ sqlalchemy==2.0.41
 python-dotenv==1.1.0
 python-jose==3.5.0
 passlib==1.7.4
+bcrypt==4.1.3
 protobuf==6.31.1
 deep-translator==1.11.4
 requests==2.32.4
+pydantic-settings>=2.0
