--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,6 @@ requests==2.32.4
 pydantic-settings>=2.0
 google-generativeai==0.8.5
 pgvector==0.4.1
+SpeechRecognition==3.14.3
+pydub==0.25.1
+python-multipart==0.0.20
